--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate.git"
+    "url": ""
   },
   "keywords": [
     "react",
@@ -19,12 +19,12 @@
     "edit",
     "webpack"
   ],
-  "author": "Noah-Jerome Lotzer <n.lotzer@neusta.de>",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/noahlotzer/react-simple-boilerplate",
+  "homepage": "",
   "engines": {
     "node": ">=6.0.0"
   },
@@ -45,6 +45,7 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "prettier": "^1.16.4",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "ws": "^6.1.3"
